--- a/frontend/src/app/features/store/product-detail-modal/product-detail-modal.component.scss
+++ b/frontend/src/app/features/store/product-detail-modal/product-detail-modal.component.scss
@@ -39,7 +39,7 @@
   }
 
   .modal-image-col {
-    background: var(--color-surface);
+    background: #fff;
     display: flex;
     align-items: center;
     justify-content: center;
